@@ -1,3 +1,8 @@
+Tue Jul 05 21:40:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/Mem_Map.cpp:
+          Changed to consistently use ACE_OS::shm_open/ACE_OS::shm_unlink.
+
 Tue Jul 05 21:15:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * ace/OS_NS_Thread{.h .inl .cpp}:
